PR c++/87519 - bogus warning with -Wsign-conversion.

* typeck.c (cp_build_binary_op): Use same_type_p instead of comparing
	the types directly.

	* g++.dg/warn/Wsign-conversion-5.C: New test.

From-SVN: r274211